--- a/css/scroll.css
+++ b/css/scroll.css
@@ -1,39 +1,38 @@
-.scroll{
-    opacity: 0;
-    filter: blur(10px);
-    transform: translatex(-100%);
-    transition: opacity 1s ease-in-out;
+.scroll {
+	opacity: 0;
+	filter: blur(10px);
+	transform: translatex(-100%);
+	transition: opacity 1s ease-in-out;
 }
-.show{
-    opacity: 1;
-    filter: blur(0);
-    transform: translateX(0);
+.show {
+	opacity: 1;
+	filter: blur(0);
+	transform: translateX(0);
 }
-@media(prefers-reduced-motion){
-    .scroll{
-        transition: none;
-    }
+@media (prefers-reduced-motion) {
+	.scroll {
+		transition: none;
+	}
 }
 
 /********************** Button Top *******************************/
 #myBtn {
-    position: fixed;
-    bottom: 60px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-  }
-  button svg{
-    fill: white;
-  }
-  #myBtn:hover {
-    background-color: #00ffaa76;
-    border-radius: 15px;
-  }
-  
+	position: fixed;
+	bottom: 60px;
+	right: 30px;
+	z-index: 99;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	background-color: transparent;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 4px;
+}
+button svg {
+	fill: white;
+}
+#myBtn:hover {
+	background-color: rgba(91, 82, 153, 0.46); /* Changé : Violet avec opacité */
+	border-radius: 15px;
+}
